--- a/miyahuna/accounts/templates/accounts/admin_panel.html
+++ b/miyahuna/accounts/templates/accounts/admin_panel.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 
 {% block content %}
@@ -10,7 +11,7 @@
                            <img src="https://www.bootstrapdash.com/demo/purple/jquery/template/assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image">
                            <h4 class="font-weight-normal mb-3 col-6">{% translate 'sales' %} <i class="mdi mdi-chart-line mdi-24px float-right pl-2"></i>
                            </h4>
-                           <h2 class="mb-5"> <i class="mdi mdi-currency-ils"></i> 2500</h2>
+                           <h2 class="mb-5"> <i class="mdi mdi-currency-ils"></i> <span id="sales"></span></h2>
                            <p>{% translate 'choose a date' %} :</p>
                            <div class=' position-relative text-white' id="reportrange" style=" cursor: pointer;">
                               <div class="border p-1 d-inline-block">
@@ -29,11 +30,11 @@
                            </h4>
                            <h2 class="mb-5">
                               {% if OrdersCount > 2 %}
-                                 {{OrdersCount}} {% translate 'orders' %}
+                                 <span class="counter" data-value="{{OrdersCount}}"></span> {% translate 'orders' %}
                               {% elif OrdersCount == 0 %}
                                  {% translate 'theres no pending orders' %}
                               {% else %}
-                                 {{OrdersCount}} {% translate 'order' %}
+                                 <span class="counter" data-value="{{OrdersCount}}"></span> {% translate 'order' %}
                               {% endif %}
                            </h2>
                         </div>
@@ -45,7 +46,7 @@
                            <img src="https://www.bootstrapdash.com/demo/purple/jquery/template/assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image">
                            <h4 class="font-weight-normal mb-3">{% translate 'customers count' %} <i class="float-right mdi mdi-24px mdi-account-group pl-2"></i>
                            </h4>
-                           <h2 class="mb-5">{{CustomersCount}} {% translate 'customer' %}</h2>
+                           <h2 class="mb-5"><span class="counter" data-value="{{CustomersCount}}"></span> {% translate 'customer' %}</h2>
                         </div>
                      </div>
                   </div>
@@ -63,4 +64,9 @@
                   </div>
                </div>
 
+{% endblock %}
+
+{% block js %}
+<script src="{% static 'js/chart.min.js' %}"></script>
+<script src="{% static 'js/mainPanel.js' %}"></script>
 {% endblock %}
