--- a/miyahuna/accounts/templates/accounts/changePassword.html
+++ b/miyahuna/accounts/templates/accounts/changePassword.html
@@ -6,23 +6,12 @@
     {% translate 'change password' %}
 {% endblock %}
 
+{% load crispy_forms_tags %}
 {% block content %}
-{% for field in form %}
-    {{ field.errors }}
-{% endfor %}
-
 <form action="{% url 'UpdateProfile' %}" method='post'>
-    {% csrf_token %}
 
-{% for field in form %}
-<div class="align-items-baseline form-group justify-content-around flex-nowrap  row ">
-        {{ field.label_tag }}
-            <div class="col-sm-9">
-             {{ field }}
-             </div>
-    </div>
-        {% endfor %}
-<input class="btn btn-gradient-primary font-weight-medium auth-form-btn" type="submit" value="{% translate 'submit' %}">
+    {% crispy form %}
+
 </form>
 {% endblock %}
 
