--- a/miyahuna/accounts/templates/accounts/login.html
+++ b/miyahuna/accounts/templates/accounts/login.html
@@ -1,17 +1,16 @@
 {% load static %}
-
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
-<!-- saved from url=(0055)https://marketsnap.herokuapp.com/accounts/login/?next=/ -->
-<html lang="ar" dir="rtl"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="ar" dir="rtl">
 
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" type="image/jpg" href="{% static 'imgs/logoMini.png' %}">
-
-
-    <title>Market Snap</title>
-    <link rel="stylesheet" href="{% static 'css/materialdesignicons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/jpg" href="{% static 'imgs/logoMini.png' %}">
+      <title>Miyahuna - Login</title>
+      <link rel="stylesheet" href="{% static 'css/materialdesignicons.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   </head>
   <body class=" rtl">
@@ -24,15 +23,7 @@
                 <div class="brand-logo d-flex justify-content-center">
                   <img src="{% static 'imgs/logo.png' %}">
                 </div>
-                <form class="pt-3 text-right" action="{% url 'login' %}" method="post">
-                  {% csrf_token %}
-                  {{ form.as_p }}
-
-                  <div class="mt-3 d-flex">
-                    <button class="btn btn-gradient-primary font-weight-medium auth-form-btn">دخول</button>
-                  </div>
-                  <p class="pt-2 text-muted">في حال نسيت كلمة المرور اتصل على : 0598123416</p>
-                </form>
+                {% crispy form %}
               </div>
             </div>
           </div>
@@ -41,9 +32,5 @@
       </div>
       <!-- page-body-wrapper ends -->
     </div>
-
-
-
-
 
 </body></html>
