--- a/miyahuna/employees/templates/employees/addDataEntryEmployee.html
+++ b/miyahuna/employees/templates/employees/addDataEntryEmployee.html
@@ -4,25 +4,15 @@
 {% block cardtitle %}
     {% translate 'add data entry employee' %}
 {% endblock %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-{% for field in form %}
-    {{ field.errors }}
-{% endfor %}
-<form action="{% url 'CreateDataEntryEmployee' %}" method='post'>
-    {% csrf_token %}
+    <form action="{% url 'CreateDataEntryEmployee' %}" method='post'>
+        {% csrf_token %}
 
-{% for field in form %}
-<div class="align-items-baseline form-group justify-content-around row ">
-        {{ field.label_tag }}
-            <div class="col-sm-9">
-             {{ field }}
-             </div>
-    </div>
-        {% endfor %}
-<input class="btn btn-gradient-primary font-weight-medium auth-form-btn" type="submit" value="{% translate 'submit' %}">
-</form>
+        {% crispy form %}
 
+    </form>
 
 {% endblock %}
 
