--- a/miyahuna/templates/sidebar.html
+++ b/miyahuna/templates/sidebar.html
@@ -5,7 +5,7 @@
 {% load i18n %}
 <nav class="d-print-none sidebar sidebar-offcanvas" id="sidebar">
                <ul class="nav ps ps--active-y py-4">
-                  <li class="nav-item {% if request.get_full_path == main %}active{% endif %}">
+                  <li class="nav-item {% if request.get_full_path == main  or 'accounts' in request.get_full_path %}active{% endif %}">
                      <a class="nav-link " href="{{main}}">
                      <span class="menu-title">{% translate 'main' %}</span>
                      <i class="mdi mdi-home menu-icon"></i>
@@ -27,12 +27,6 @@
                      <a class="nav-link" href="{{orders_list}}">
                      <span class="menu-title">{% translate 'orders' %}</span>
                      <i class="mdi mdi-note-text menu-icon"></i>
-                     </a>
-                  </li>
-                  <li class="nav-item ">
-                     <a class="nav-link" href="sales.html">
-                     <span class="menu-title">{% translate 'sales' %}</span>
-                     <i class="mdi mdi-cash-multiple menu-icon"></i>
                      </a>
                   </li>
                </ul>
