--- a/miyahuna/templates/sidebar.html
+++ b/miyahuna/templates/sidebar.html
@@ -5,29 +5,47 @@
 {% load i18n %}
 <nav class="d-print-none sidebar sidebar-offcanvas" id="sidebar">
                <ul class="nav ps ps--active-y py-4">
-                  <li class="nav-item {% if request.get_full_path == main  or 'accounts' in request.get_full_path %}active{% endif %}">
-                     <a class="nav-link " href="{{main}}">
-                     <span class="menu-title">{% translate 'main' %}</span>
-                     <i class="mdi mdi-home menu-icon"></i>
-                     </a>
-                  </li>
-                  <li class="nav-item {% if 'employees' in request.get_full_path %}active{% endif %}">
-                     <a class="nav-link " href="{{employees_list}}">
-                     <span class="menu-title">{% translate 'employees' %}</span>
-                     <i class="mdi mdi-human-capacity-increase menu-icon"></i>
-                     </a>
-                  </li>
-                  <li class="nav-item {% if 'customers' in request.get_full_path %}active{% endif %}">
-                     <a class="nav-link " href="{{customer_list}}">
-                     <span class="menu-title">{% translate 'customers' %}</span>
-                     <i class="mdi mdi-account-group menu-icon"></i>
-                     </a>
-                  </li>
-                  <li class="nav-item {% if 'orders' in request.get_full_path %}active{% endif %}">
-                     <a class="nav-link" href="{{orders_list}}">
-                     <span class="menu-title">{% translate 'orders' %}</span>
-                     <i class="mdi mdi-note-text menu-icon"></i>
-                     </a>
-                  </li>
+                  {% if isAdmin %}
+                     <li class="nav-item {% if request.get_full_path == main  or 'accounts' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link " href="{{main}}">
+                        <span class="menu-title">{% translate 'main' %}</span>
+                        <i class="mdi mdi-home menu-icon"></i>
+                        </a>
+                     </li>
+                     <li class="nav-item {% if 'employees' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link " href="{{employees_list}}">
+                        <span class="menu-title">{% translate 'employees' %}</span>
+                        <i class="mdi mdi-human-capacity-increase menu-icon"></i>
+                        </a>
+                     </li>
+                     <li class="nav-item {% if 'customers' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link " href="{{customer_list}}">
+                        <span class="menu-title">{% translate 'customers' %}</span>
+                        <i class="mdi mdi-account-group menu-icon"></i>
+                        </a>
+                     </li>
+
+                     <li class="nav-item {% if 'orders' in request.get_full_path %}active{% endif %}">
+                        <a class="nav-link" href="{{orders_list}}">
+                        <span class="menu-title">{% translate 'orders' %}</span>
+                        <i class="mdi mdi-note-text menu-icon"></i>
+                        </a>
+                     </li>
+                  {% elif isEmployee %}
+                     <li class="nav-item active">
+                        <a class="nav-link" href="{{main}}">
+                           <span class="menu-title">{% translate 'orders' %}</span>
+                           <i class="mdi mdi-note-text menu-icon"></i>
+                        </a>
+                     </li>
+
+                  {% else %}
+                      <li class="nav-item active">
+                        <a class="nav-link" href="{{main}}">
+                           <span class="menu-title">{% translate 'orders' %}</span>
+                           <i class="mdi mdi-note-text menu-icon"></i>
+                        </a>
+                     </li>
+                  {% endif %}
                </ul>
          </nav>
