--- a/miyahuna/templates/base.html
+++ b/miyahuna/templates/base.html
@@ -6,7 +6,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="shortcut icon" type="image/jpg" href="{% static 'imgs/logoMini.png' %}">
-      <title>Market Snap</title>
+      <title>Miyahuna - Palestine</title>
       {% include  "css.html" %}
       {% block css %}
       {% endblock %}
